Implemented Room and Player Model

--- a/DangersAndDungeons/DangersAndDungeons/MainWindow.xaml
+++ b/DangersAndDungeons/DangersAndDungeons/MainWindow.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="Dangers and Dungeons!"
         SizeToContent="WidthAndHeight">
-    <Grid Height="300" Width="300" RenderTransformOrigin="0.313,0.333">
+    <Grid Height="300" Width="300">
         <Button Name = "W" Content="W" Margin="230,250,50,30" Click="Button_Click"/>
         <Button Name = "N" Content="N" Margin="250,230,30,50" Click="Button_Click"/>
         <Button Name = "E" Content="E" Margin="270,250,10,30" Click="Button_Click"/>
         <Button Name = "S" Content="S" Margin="250,270,30,10" Click="Button_Click"/>
-        <Button Name = "Submit" Content="Submit Command" Margin="0,270,75,10" Click="Button_Click" RenderTransformOrigin="-5.226,0.736"/>
+        <Button Name = "Submit" Content="Submit Command" Margin="0,270,75,10" Click="Button_Click"/>
         <TextBox Name="box" Margin="0,0,55,55" FontFamily="Consolas" IsEnabled="False"/>
         <TextBox Name="input" Margin="0,250,75,30" FontFamily="Consolas"/>
 
